<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="@dimen/margin_content"
        tools:context=".modules.splash.SplashAct">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="@dimen/font_big"
            android:layout_marginTop="@dimen/margin_content_super_large"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_toLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_content_super_large"
            android:text="@string/text_login"
            app:layout_constraintTop_toBottomOf="@+id/textView" />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_toRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_content_in"
            android:text="@string/text_register"
            app:layout_constraintTop_toBottomOf="@+id/btn_toLogin" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>