<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="vm"
            type="com.example.moviecatalog.modules.auth.viewmodel.LoginVM" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".modules.auth.LoginAct">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/font_big"
            android:textStyle="bold"
            android:layout_marginStart="@dimen/margin_content_medium"
            android:layout_marginTop="@dimen/margin_content_super_large"
            android:text="@string/text_login"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_content_large"
            android:hint="@string/hint_email"
            android:paddingHorizontal="@dimen/margin_content_medium"
            app:layout_constraintTop_toTopOf="@id/textView"
            app:errorText='@{vm.validationEmail ? "" : "Email Belum Benar"}'>

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ed_email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@={vm.inputEmail}"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_content_in"
            android:hint="@string/hint_password"
            android:paddingHorizontal="@dimen/margin_content_medium"
            app:layout_constraintTop_toBottomOf="@+id/input_email"
            app:errorText='@{vm.validationPassword ? "" : "Password min 6 karakter"}'>

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ed_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@={vm.inputPassword}"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_content_in"
            android:onClick="@{() -> vm.loginUser()}"
            android:text="@string/text_login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/input_password" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>